Increase the amount of contiguous video memory so etna_viv can work

--- a/board/tchebb/chromecast/linux-3.0.8.config
+++ b/board/tchebb/chromecast/linux-3.0.8.config
@@ -288,7 +288,9 @@ CONFIG_ARCH_MV88DE3100_BG2=y
 # CONFIG_MV88DE3100_PM_DISABLE_2ND_SATA is not set
 CONFIG_MV88DE3100_CPU0MEM_START=0x00600000
 CONFIG_MV88DE3100_CPU0MEM_SIZE=0x13200000
-CONFIG_MV88DE3100_GPUMEM_FROM_SHM=y
+# CONFIG_MV88DE3100_GPUMEM_FROM_SHM is not set
+CONFIG_MV88DE3100_GPUMEM_START=0x22400000
+CONFIG_MV88DE3100_GPUMEM_SIZE=0x8000000
 CONFIG_MV88DE3100_SHMMEM_START=0x13800000
 CONFIG_MV88DE3100_SHMMEM_SIZE=0x0C800000
 CONFIG_MV88DE3100_SHMMEM_CACHE_SIZE=0x0C000000
