Update Linux config for fbdev development

--- a/board/tchebb/chromecast/linux-3.0.8.config
+++ b/board/tchebb/chromecast/linux-3.0.8.config
@@ -336,7 +336,8 @@ CONFIG_MV88DE3100_GPU=y
 # CONFIG_MV88DE3100_PWM is not set
 CONFIG_MV88DE3100_GPIO=y
 CONFIG_MV88DE3100_FUSION=y
-CONFIG_MV88DE3100_FASTLOGO=y
+# CONFIG_MV88DE3100_FASTLOGO is not set
+CONFIG_MV88DE3100_FBDEV=y
 
 #
 # System MMU
@@ -1145,9 +1146,9 @@ CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
-# CONFIG_FB_CFB_FILLRECT is not set
-# CONFIG_FB_CFB_COPYAREA is not set
-# CONFIG_FB_CFB_IMAGEBLIT is not set
+CONFIG_FB_CFB_FILLRECT=y
+CONFIG_FB_CFB_COPYAREA=y
+CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_CFB_REV_PIXELS_IN_BYTE is not set
 # CONFIG_FB_SYS_FILLRECT is not set
 # CONFIG_FB_SYS_COPYAREA is not set
