eureka: enable gdb

--- a/configs/tchebb_chromecast_defconfig
+++ b/configs/tchebb_chromecast_defconfig
@@ -4,6 +4,7 @@ BR2_KERNEL_HEADERS_3_0=y
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
+BR2_PTHREAD_DEBUG=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
@@ -18,6 +19,9 @@ BR2_PACKAGE_DIRECTFB=y
 BR2_PACKAGE_DIRECTFB_EXAMPLES=y
 BR2_PACKAGE_DIRECTFB_EXAMPLES_DOK=y
 BR2_PACKAGE_DIRECTFB_EXAMPLES_FIRE=y
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
