eureka: add mtd tools

--- a/configs/tchebb_chromecast_defconfig
+++ b/configs/tchebb_chromecast_defconfig
@@ -14,6 +14,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/chromecast/busybox-1.21.x.config"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
+BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
