eureka: add fb-test

--- a/configs/tchebb_chromecast_defconfig
+++ b/configs/tchebb_chromecast_defconfig
@@ -14,7 +14,11 @@ BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/chromecast/busybox-1.21.x.config"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
+BR2_PACKAGE_FB_TEST_APP=y
 BR2_PACKAGE_MTD=y
+BR2_PACKAGE_FREETYPE=y
+BR2_PACKAGE_JPEG=y
+BR2_PACKAGE_LIBPNG=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
