Rename eureka board directory, add multi-image support, and more

--- a/configs/eureka_fb-devel_defconfig
+++ b/configs/eureka_fb-devel_defconfig
@@ -9,8 +9,16 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
-BR2_ROOTFS_OVERLAY="board/tchebb/chromecast/fs-overlay/"
-BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/chromecast/busybox-1.21.x.config"
+BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh"
+BR2_LINUX_KERNEL=y
+BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="file://board/tchebb/eureka/linux-3.0.8.tar.gz"
+BR2_LINUX_KERNEL_PATCH="board/tchebb/eureka/linux-3.0.8-patches/"
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/tchebb/eureka/linux-3.0.8_fb-devel.config"
+BR2_LINUX_KERNEL_ZIMAGE=y
+BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.21.x.config"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
@@ -28,10 +36,3 @@ BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_UTIL_LINUX=y
 BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
-BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="file://board/tchebb/chromecast/linux-3.0.8.tar.gz"
-BR2_LINUX_KERNEL_PATCH="board/tchebb/chromecast/linux-3.0.8-patches/"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/tchebb/chromecast/linux-3.0.8.config"
-BR2_LINUX_KERNEL_ZIMAGE=y
