eureka: add set-led package

--- a/configs/eureka_fb-devel_defconfig
+++ b/configs/eureka_fb-devel_defconfig
@@ -24,6 +24,7 @@ BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_FB_TEST_APP=y
 BR2_PACKAGE_MTD=y
+BR2_PACKAGE_SET_LED=y
 BR2_PACKAGE_FREETYPE=y
 BR2_PACKAGE_JPEG=y
 BR2_PACKAGE_LIBPNG=y
