--- a/configs/eureka_basic_defconfig
+++ b/configs/eureka_basic_defconfig
@@ -19,6 +19,7 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/tchebb/eureka/linux-3.0.8.config"
 BR2_LINUX_KERNEL_ZIMAGE=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.21.x.config"
 BR2_PACKAGE_MTD=y
+BR2_PACKAGE_SET_LED=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
