--- a/board/tchebb/eureka/linux-3.0.8.config
+++ b/board/tchebb/eureka/linux-3.0.8.config
@@ -444,7 +444,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_USE_OF is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_CMDLINE="console=ttyS0,115200"
+CONFIG_CMDLINE="console=ttyS0,115200 mtdblock.ro_fspart=rootfs"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
