--- a/configs/eureka_flasher_defconfig
+++ b/configs/eureka_flasher_defconfig
@@ -16,11 +16,13 @@ BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="file://board/tchebb/eureka/linux-3.0.8.tar.gz"
 BR2_LINUX_KERNEL_PATCH="board/tchebb/eureka/linux-3.0.8-patches/"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/tchebb/eureka/linux-3.0.8.config"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/tchebb/eureka/linux-3.0.8_flasher.config"
 BR2_LINUX_KERNEL_ZIMAGE=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.21.x_flasher.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_MTD=y
+BR2_PACKAGE_SQUASHFS=y
+BR2_PACKAGE_UNIONFS=y
 BR2_PACKAGE_SET_LED=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
