fb-devel: copy some defconfig changes from basic

--- a/configs/eureka_fb-devel_defconfig
+++ b/configs/eureka_fb-devel_defconfig
@@ -9,6 +9,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
+BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
 BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh"
 BR2_LINUX_KERNEL=y
@@ -23,7 +24,14 @@ BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_FB_TEST_APP=y
+BR2_PACKAGE_DOSFSTOOLS=y
+BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
+BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
+BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_MTD=y
+BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_SET_LED=y
 BR2_PACKAGE_FREETYPE=y
 BR2_PACKAGE_JPEG=y
@@ -35,5 +43,3 @@ BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_KMOD=y
-BR2_PACKAGE_UTIL_LINUX=y
-BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
