--- a/board/tchebb/eureka/busybox-1.21.x_flasher.config
+++ b/board/tchebb/eureka/busybox-1.21.x_flasher.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.21.1
-# Fri Sep 20 18:16:41 2013
+# Sat Oct  5 19:30:31 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -127,10 +127,10 @@ CONFIG_FEATURE_HWIB=y
 #
 # Archival Utilities
 #
-# CONFIG_FEATURE_SEAMLESS_XZ is not set
+CONFIG_FEATURE_SEAMLESS_XZ=y
 # CONFIG_FEATURE_SEAMLESS_LZMA is not set
 # CONFIG_FEATURE_SEAMLESS_BZ2 is not set
-# CONFIG_FEATURE_SEAMLESS_GZ is not set
+CONFIG_FEATURE_SEAMLESS_GZ=y
 # CONFIG_FEATURE_SEAMLESS_Z is not set
 CONFIG_AR=y
 # CONFIG_FEATURE_AR_LONG_FILENAMES is not set
@@ -153,7 +153,7 @@ CONFIG_GZIP_FAST=0
 # CONFIG_RPM is not set
 CONFIG_TAR=y
 CONFIG_FEATURE_TAR_CREATE=y
-# CONFIG_FEATURE_TAR_AUTODETECT is not set
+CONFIG_FEATURE_TAR_AUTODETECT=y
 CONFIG_FEATURE_TAR_FROM=y
 # CONFIG_FEATURE_TAR_OLDGNU_COMPATIBILITY is not set
 # CONFIG_FEATURE_TAR_OLDSUN_COMPATIBILITY is not set
