--- a/configs/eureka_fb-devel_defconfig
+++ b/configs/eureka_fb-devel_defconfig
@@ -33,9 +33,10 @@ BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_SET_LED=y
+BR2_PACKAGE_ETNA_VIV=y
+BR2_PACKAGE_ETNA_VIV_ABI_EUREKA=y
 BR2_PACKAGE_FREETYPE=y
 BR2_PACKAGE_JPEG=y
-BR2_PACKAGE_LIBPNG=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
