use kernel from external git repo for all eureka images

--- a/configs/eureka_basic_defconfig
+++ b/configs/eureka_basic_defconfig
@@ -1,6 +1,6 @@
 BR2_arm=y
 BR2_arm7tdmi=y
-BR2_KERNEL_HEADERS_3_0=y
+BR2_KERNEL_HEADERS_3_9=y
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
@@ -12,12 +12,12 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
 BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="file://board/tchebb/eureka/linux-3.0.8.tar.gz"
-BR2_LINUX_KERNEL_PATCH="board/tchebb/eureka/linux-3.0.8-patches/"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/tchebb/eureka/linux-3.0.8.config"
-BR2_LINUX_KERNEL_ZIMAGE=y
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="https://github.com/tchebb/eureka_linux.git"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="v1"
+BR2_LINUX_KERNEL_DEFCONFIG="eureka_basic"
+BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="berlin2cd-dongle"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.21.x.config"
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
