--- a/package/Config.in
+++ b/package/Config.in
@@ -250,6 +250,7 @@ source "package/flashrom/Config.in"
 source "package/fconfig/Config.in"
 source "package/fis/Config.in"
 source "package/fmtools/Config.in"
+source "package/fts-utils/Config.in"
 source "package/fxload/Config.in"
 source "package/gadgetfs-test/Config.in"
 source "package/gpsd/Config.in"
