add fts-utils to all eureka images

--- a/configs/eureka_basic_defconfig
+++ b/configs/eureka_basic_defconfig
@@ -27,6 +27,7 @@ BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_SQUASHFS=y
+BR2_PACKAGE_FTS_UTILS=y
 BR2_PACKAGE_SET_LED=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
