flashcast: move flasher scripts into their own package

--- a/package/Config.in
+++ b/package/Config.in
@@ -699,6 +699,7 @@ menu "Miscellaneous"
 source "package/aespipe/Config.in"
 source "package/collectd/Config.in"
 source "package/empty/Config.in"
+source "package/flashcast-flasher/Config.in"
 source "package/googlefontdirectory/Config.in"
 source "package/mcrypt/Config.in"
 source "package/mobile-broadband-provider-info/Config.in"
