--- a/configs/eureka_flasher_defconfig
+++ b/configs/eureka_flasher_defconfig
@@ -31,7 +31,7 @@ BR2_PACKAGE_MTD=y
 BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_UNIONFS=y
 BR2_PACKAGE_FTS_UTILS=y
-BR2_PACKAGE_SET_LED=y
+BR2_PACKAGE_FLASHCAST_FLASHER=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
