--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -9,8 +9,8 @@ BR2_TARGET_GENERIC_HOSTNAME="flashcast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to FlashCast!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
-BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/ board/tchebb/eureka/fs-overlay_flasher/"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh board/tchebb/eureka/make-flasher-release-image.sh"
+BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/ board/tchebb/eureka/fs-overlay_flashcast/"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh board/tchebb/eureka/make-flashcast-release-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="https://github.com/tchebb/eureka_linux.git"
@@ -19,7 +19,7 @@ BR2_LINUX_KERNEL_PATCH="board/tchebb/eureka/linux-flashcast-logo.patch"
 BR2_LINUX_KERNEL_DEFCONFIG="eureka_basic"
 BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="berlin2cd-dongle"
-BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.21.x_flasher.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.21.x_flashcast.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
@@ -30,7 +30,6 @@ BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_UNIONFS=y
-BR2_PACKAGE_FTS_UTILS=y
 BR2_PACKAGE_FLASHCAST_FLASHER=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
