--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -10,6 +10,7 @@ BR2_TARGET_GENERIC_ISSUE="Welcome to FlashCast!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
 BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/ board/tchebb/eureka/fs-overlay_flashcast/"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/tchebb/eureka/update-flashcast-issue.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh board/tchebb/eureka/make-flashcast-release-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
