add zip and unzip packages to buildroot
After a hour of learning git, this is a merged commit that adds the required zip and unzip packages. All it needs is the dependencies defined.

--- a/package/Config.in
+++ b/package/Config.in
@@ -13,7 +13,9 @@ endif
 source "package/infozip/Config.in"
 source "package/lzop/Config.in"
 source "package/lzma/Config.in"
+source "package/unzip/Config.in"
 source "package/xz/Config.in"
+source "package/zip/Config.in"
 endmenu
 
 menu "Debugging, profiling and benchmark"
