Add sed package from buildroot
We disable sed from busybox, and enable the package

--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -41,6 +41,7 @@ BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_BASH=y
 BR2_PACKAGE_FILE=y
 BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_SED=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 # BR2_TARGET_ROOTFS_TAR is not set
