--- a/board/tchebb/eureka/busybox-1.21.x_flashcast.config
+++ b/board/tchebb/eureka/busybox-1.21.x_flashcast.config
@@ -385,7 +385,7 @@ CONFIG_DIFF=y
 # CONFIG_FEATURE_DIFF_LONG_OPTIONS is not set
 CONFIG_FEATURE_DIFF_DIR=y
 # CONFIG_ED is not set
-CONFIG_SED=y
+# CONFIG_SED is not set
 CONFIG_FEATURE_ALLOW_EXEC=y
 
 #
