update kernel git URLs

--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -13,7 +13,7 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/tchebb/eureka/update-flashcast-issue.sh boar
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh board/tchebb/eureka/make-flashcast-release-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/tchebb/eureka_linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/team-eureka/eureka_linux.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v1"
 BR2_LINUX_KERNEL_PATCH="board/tchebb/eureka/linux-flashcast-logo.patch"
 BR2_LINUX_KERNEL_DEFCONFIG="eureka_basic"
