--- a/configs/eureka_directfb-blobs_defconfig
+++ b/configs/eureka_directfb-blobs_defconfig
@@ -45,5 +45,8 @@ BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IW=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_SNTP=y
+# BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_KMOD=y
