--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -36,6 +36,9 @@ BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_IW=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_SNTP=y
+# BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_BASH=y
 BR2_PACKAGE_FILE=y
