--- a/configs/eureka_basic_defconfig
+++ b/configs/eureka_basic_defconfig
@@ -13,7 +13,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/team-eureka/eureka_linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v3"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v1.5-1"
 BR2_LINUX_KERNEL_DEFCONFIG="eureka_basic"
 BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="berlin2cd-dongle"
