package/res-shim: initial commit

--- a/configs/eureka_directfb-blobs_defconfig
+++ b/configs/eureka_directfb-blobs_defconfig
@@ -5,7 +5,7 @@ BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
-BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/ board/tchebb/eureka/fs-overlay_directfb-blobs/"
+BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
@@ -36,6 +36,7 @@ BR2_PACKAGE_DIRECTFB_EXAMPLES_KNUCKLES=y
 BR2_PACKAGE_DIRECTFB_EXAMPLES_PARTICLE=y
 BR2_PACKAGE_BERLIN_BLOBS=y
 BR2_PACKAGE_FTS_UTILS=y
+BR2_PACKAGE_RES_SHIM=y
 BR2_PACKAGE_SET_LED=y
 BR2_PACKAGE_ETNA_VIV=y
 BR2_PACKAGE_ETNA_VIV_ABI_EUREKA=y
