--- a/package/Config.in
+++ b/package/Config.in
@@ -326,6 +326,7 @@ source "package/parted/Config.in"
 source "package/pciutils/Config.in"
 source "package/picocom/Config.in"
 source "package/read-edid/Config.in"
+source "package/res-shim/Config.in"
 source "package/rng-tools/Config.in"
 source "package/rpi-userland/Config.in"
 source "package/sane-backends/Config.in"
