enforce safe library paths for all eureka defconfigs

--- a/configs/eureka_directfb-blobs_defconfig
+++ b/configs/eureka_directfb-blobs_defconfig
@@ -2,6 +2,7 @@ BR2_arm=y
 BR2_cortex_a9=y
 BR2_ARM_ENABLE_NEON=y
 BR2_ARM_FPU_NEON=y
+BR2_COMPILER_PARANOID_UNSAFE_PATH=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
