--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -2,6 +2,7 @@ BR2_arm=y
 BR2_cortex_a9=y
 BR2_ARM_ENABLE_NEON=y
 BR2_ARM_FPU_NEON=y
+BR2_COMPILER_PARANOID_UNSAFE_PATH=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="flashcast"
