update to be a Buildroot BR2_EXTERNAL tree
This means we no longer have to manually overlay the tree on top of
Buildroot, and it should eliminate the need for a manual update for each
new Buildroot release. Please see the updated README if you're used to
the old way of doing things.

--- a/configs/eureka_fb-devel_defconfig
+++ b/configs/eureka_fb-devel_defconfig
@@ -10,8 +10,8 @@ BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
-BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/tchebb/eureka/fs-overlay/"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/tchebb/eureka/make-bootimg.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/team-eureka/eureka_linux.git"
@@ -19,7 +19,7 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v1.6-1"
 BR2_LINUX_KERNEL_DEFCONFIG="eureka_fb-devel"
 BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="berlin2cd-dongle"
-BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.22.x.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/board/tchebb/eureka/busybox-1.22.x.config"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_DEBUGGER=y
