--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -10,18 +10,18 @@ BR2_TARGET_GENERIC_HOSTNAME="flashcast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to FlashCast!"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
-BR2_ROOTFS_OVERLAY="board/tchebb/eureka/fs-overlay/ board/tchebb/eureka/fs-overlay_flashcast/"
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/tchebb/eureka/update-flashcast-issue.sh board/tchebb/eureka/set-bash-as-root-shell.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/tchebb/eureka/make-bootimg.sh board/tchebb/eureka/make-flashcast-release-image.sh"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/tchebb/eureka/fs-overlay/ $(BR2_EXTERNAL)/board/tchebb/eureka/fs-overlay_flashcast/"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/tchebb/eureka/update-flashcast-issue.sh $(BR2_EXTERNAL)/board/tchebb/eureka/set-bash-as-root-shell.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/tchebb/eureka/make-bootimg.sh $(BR2_EXTERNAL)/board/tchebb/eureka/make-flashcast-release-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/team-eureka/eureka_linux.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="v1.6-1"
-BR2_LINUX_KERNEL_PATCH="board/tchebb/eureka/linux-flashcast-logo.patch"
+BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL)/board/tchebb/eureka/linux-flashcast-logo.patch"
 BR2_LINUX_KERNEL_DEFCONFIG="eureka_basic"
 BR2_LINUX_KERNEL_APPENDED_ZIMAGE=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="berlin2cd-dongle"
-BR2_PACKAGE_BUSYBOX_CONFIG="board/tchebb/eureka/busybox-1.22.x_flashcast.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/board/tchebb/eureka/busybox-1.22.x_flashcast.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_SED=y
 BR2_PACKAGE_DOSFSTOOLS=y
