--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -12,7 +12,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="letmein"
 BR2_SYSTEM_BIN_SH_BASH=y
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/tchebb/eureka/fs-overlay/ $(BR2_EXTERNAL)/board/tchebb/eureka/fs-overlay_flashcast/"
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/tchebb/eureka/update-flashcast-issue.sh $(BR2_EXTERNAL)/board/tchebb/eureka/set-bash-as-root-shell.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/tchebb/eureka/update-flashcast-issue.sh $(BR2_EXTERNAL)/board/tchebb/eureka/set-bash-as-root-shell.sh $(BR2_EXTERNAL)/board/tchebb/eureka/disable-dnsmasq.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/tchebb/eureka/make-bootimg.sh $(BR2_EXTERNAL)/board/tchebb/eureka/make-flashcast-release-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
