update for buildroot 2017.02.2

--- a/configs/eureka_directfb-blobs_defconfig
+++ b/configs/eureka_directfb-blobs_defconfig
@@ -1,8 +1,8 @@
 BR2_arm=y
 BR2_cortex_a9=y
 BR2_ARM_ENABLE_NEON=y
+BR2_ARM_ENABLE_VFP=y
 BR2_ARM_FPU_NEON=y
-BR2_COMPILER_PARANOID_UNSAFE_PATH=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
@@ -32,18 +32,6 @@ BR2_PACKAGE_DIRECTFB=y
 # BR2_PACKAGE_DIRECTFB_SERIALMOUSE is not set
 # BR2_PACKAGE_DIRECTFB_TSLIB is not set
 BR2_PACKAGE_DIRECTFB_EXAMPLES=y
-BR2_PACKAGE_DIRECTFB_EXAMPLES_ANDI=y
-BR2_PACKAGE_DIRECTFB_EXAMPLES_DOK=y
-BR2_PACKAGE_DIRECTFB_EXAMPLES_FIRE=y
-BR2_PACKAGE_DIRECTFB_EXAMPLES_KNUCKLES=y
-BR2_PACKAGE_DIRECTFB_EXAMPLES_PARTICLE=y
-BR2_PACKAGE_BERLIN_BLOBS=y
-BR2_PACKAGE_FTS_UTILS=y
-BR2_PACKAGE_RES_SHIM=y
-BR2_PACKAGE_SET_LED=y
-BR2_PACKAGE_ETNA_VIV=y
-BR2_PACKAGE_ETNA_VIV_ABI_EUREKA=y
-BR2_PACKAGE_MESA3D_ETNA_VIV=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
@@ -54,3 +42,10 @@ BR2_PACKAGE_NTP_SNTP=y
 # BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_ETNA_VIV=y
+BR2_PACKAGE_ETNA_VIV_ABI_EUREKA=y
+BR2_PACKAGE_MESA3D_ETNA_VIV=y
+BR2_PACKAGE_SET_LED=y
+BR2_PACKAGE_FTS_UTILS=y
+BR2_PACKAGE_BERLIN_BLOBS=y
+BR2_PACKAGE_RES_SHIM=y
