--- a/configs/eureka_flashcast_defconfig
+++ b/configs/eureka_flashcast_defconfig
@@ -1,10 +1,11 @@
 BR2_arm=y
 BR2_cortex_a9=y
-BR2_ARM_EABIHF=y
 BR2_ARM_ENABLE_NEON=y
+BR2_ARM_ENABLE_VFP=y
 BR2_ARM_FPU_NEON=y
-BR2_COMPILER_PARANOID_UNSAFE_PATH=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_3_8=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
+BR2_GCC_VERSION_4_9_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="flashcast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to FlashCast!"
@@ -34,7 +35,6 @@ BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_UNIONFS=y
-BR2_PACKAGE_FLASHCAST_FLASHER=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
@@ -49,3 +49,4 @@ BR2_PACKAGE_KMOD=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_FLASHCAST_FLASHER=y
