--- a/configs/eureka_basic_defconfig
+++ b/configs/eureka_basic_defconfig
@@ -1,10 +1,11 @@
 BR2_arm=y
 BR2_cortex_a9=y
-BR2_ARM_EABIHF=y
 BR2_ARM_ENABLE_NEON=y
+BR2_ARM_ENABLE_VFP=y
 BR2_ARM_FPU_NEON=y
-BR2_COMPILER_PARANOID_UNSAFE_PATH=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_3_8=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
+BR2_GCC_VERSION_4_9_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
