--- a/configs/eureka_fb-devel_defconfig
+++ b/configs/eureka_fb-devel_defconfig
@@ -1,10 +1,12 @@
 BR2_arm=y
 BR2_cortex_a9=y
 BR2_ARM_ENABLE_NEON=y
+BR2_ARM_ENABLE_VFP=y
 BR2_ARM_FPU_NEON=y
-BR2_COMPILER_PARANOID_UNSAFE_PATH=y
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_3_8=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_PTHREAD_DEBUG=y
+BR2_GCC_VERSION_4_9_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="chromecast"
 BR2_TARGET_GENERIC_ISSUE="Welcome to tchebb's Chromecast image!"
@@ -32,10 +34,6 @@ BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_SQUASHFS=y
 BR2_PACKAGE_FB_TEST_APP=y
-BR2_PACKAGE_FTS_UTILS=y
-BR2_PACKAGE_SET_LED=y
-BR2_PACKAGE_ETNA_VIV=y
-BR2_PACKAGE_ETNA_VIV_ABI_EUREKA=y
 BR2_PACKAGE_FREETYPE=y
 BR2_PACKAGE_JPEG=y
 BR2_PACKAGE_DNSMASQ=y
@@ -48,3 +46,7 @@ BR2_PACKAGE_NTP_SNTP=y
 # BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_ETNA_VIV=y
+BR2_PACKAGE_ETNA_VIV_ABI_EUREKA=y
+BR2_PACKAGE_SET_LED=y
+BR2_PACKAGE_FTS_UTILS=y
